<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>

    <string name="project1">Spotify Streamer</string>
    <string name="project2">Scores App</string>
    <string name="project3">Library App</string>
    <string name="project4">Build It Bigger</string>
    <string name="project5">XYZ Reader</string>
    <string name="project6">Capstone: My Own App</string>
</resources>
