<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_nanodegree_apps"
        android:gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginBottom="@dimen/margin_25" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project1"
        android:id="@+id/button_project1"
        style="@style/buttonStyle"
        android:layout_gravity="center_horizontal"
        android:onClick="onButtonClick" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project2"
        android:id="@+id/button_project2"
        style="@style/buttonStyle"
        android:layout_gravity="center_horizontal"
        android:onClick="onButtonClick" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project3"
        android:id="@+id/button_project3"
        style="@style/buttonStyle"
        android:layout_gravity="center_horizontal"
        android:onClick="onButtonClick" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project4"
        android:id="@+id/button_project4"
        style="@style/buttonStyle"
        android:layout_gravity="center_horizontal"
        android:onClick="onButtonClick" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project5"
        android:id="@+id/button_project5"
        style="@style/buttonStyle"
        android:layout_gravity="center_horizontal"
        android:onClick="onButtonClick" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/project6"
        android:id="@+id/button_project6"
        style="@style/buttonStyle"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_red_dark"
        android:layout_gravity="center_horizontal"
        android:onClick="onButtonClick" />
</LinearLayout>
